# suki-helper

./: README.md  progress.md  pyproject.toml  suki_helper.spec  work_plan.md
src/suki_helper/app/: bootstrap.py  theme.py
src/suki_helper/pdf/: renderer.py
src/suki_helper/search/: ranker.py
src/suki_helper/services/: preview_service.py  render_service.py  search_service.py
src/suki_helper/storage/: db.py  repositories.py
src/suki_helper/tools/: __init__.py  benchmark_search.py
src/suki_helper/ui/: main_window.py
src/suki_helper/workers/: indexing_worker.py
tests/: test_app_theme.py  test_benchmark_search.py  test_indexing_worker.py  test_main_window_state.py  test_ranking_rarity.py  test_storage_bootstrap.py
tools/: build_windows_exe.bat
