[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suki-helper"
version = "0.1.0"
description = "Desktop PDF search application with per-PDF indexing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.7,<7",
  "PyMuPDF>=1.24,<2",
  "platformdirs>=4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
build = [
  "pyinstaller>=6,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
